# TQMesh

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
.github/workflows/: compile_and_test.yml
auxiliary/: TQMeshConfig.h.in
auxiliary/test_data/: .gitignore  Airfoil.csv  BadCSVInput.csv  ExteriorBoundary.csv  InteriorBoundary_1.csv  InteriorBoundary_2.csv  LakeSuperior.txt  ParaReaderTests.input.para
input/: 01_simple_triangular_mesh.para  02_square_in_channel.para  03_boundary_shapes.para  04_fixed_vertices.para  05_merge_meshes.para  06_airfoil_from_csv.para  07_multiple_meshes.para  08_thin_fracture.para  09_fixed_interior_edges.para  AllQuadMesh.para  BoundaryShapeMesh.para  Example.para  Example_1.para  Example_2.para  Example_3.para  Example_4.para  Example_5.para  Example_6.para  Example_7.para  RectangleMesh.para
scripts/: compile_tqmesh.sh  convert2foam.py  examples_tqmesh.sh  openfoam_export.py  plot_mesh.py  plot_mesh_benchmark.py  plot_qtree_benchmark.py  test_tqmesh.sh
src/: tags
src/algorithm/: Boundary.h  CMakeLists.txt  Cleanup.h  Domain.h  Edge.h  EdgeList.h  EntityChecks.h  Error.h  Facet.h  FacetGeometry.h  Front.h  FrontAlgorithm.h  FrontInitData.h  FrontInitializer.h  FrontPaving.h  FrontQuadLayering.h  FrontTriangulation.h  FrontUpdate.h  LaplaceSmoothingStrategy.h  Mesh.h  MeshBuilder.h  MeshChecker.h  MeshCleanup.h  MeshGenerator.h  MeshInitializer.h  MeshMerger.h  MeshRefinement.h  MeshSmoother.h  MeshValidator.h  MeshWriter.h  MeshingAlgorithm.h  MeshingFunctions.h  MeshingStrategy.h  ModificationStrategy.h  NullEdge.h  NullFacet.h  OldFrontPaving.h  OldMesh.h  Quad.h  QuadGeometry.h  (+19 more)
src/app/: CMakeLists.txt  TQMeshApp.h  exprtk.h  main.cpp  size_function.cpp  size_function.h  unused.c
src/examples/: 01_simple_triangular_mesh.cpp  02_square_in_channel.cpp  03_boundary_shapes.cpp  04_fixed_vertices.cpp  05_merge_meshes.cpp  06_airfoil_from_csv.cpp  07_multiple_meshes.cpp  07_tqmesh_banner.cpp  08_nested_meshes.cpp  08_thin_fracture.cpp  08_tqmesh_banner.cpp  09_fixed_edges.cpp  09_tqmesh_banner.cpp  CMakeLists.txt  boundary_shapes.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  example_8.cpp  example_9.cpp  fixed_vertices.cpp  main.cpp  merge_meshes.cpp  run_examples.cpp  run_examples.h  simple_triangular_mesh.cpp  square_in_channel.cpp
src/extern_libs/: CMakeLists.txt
src/tests/: CMakeLists.txt  TestBuilder.h  TestInitializer.h  boundary_test.cpp  container_test.cpp  edgelist_test.cpp  front_test.cpp  geometry_test.cpp  main.cpp  mesh_test.cpp  qtree_test.cpp  quad_test.cpp  run_tests.h  sizefunction_test.cpp  smoother_test.cpp  tests.cpp  tests.h  tests_Boundary.cpp  tests_Cleanup.cpp  tests_EdgeList.cpp  tests_Front.cpp  tests_Mesh.cpp  tests_MeshChecker.cpp  tests_MeshCleanup.cpp  tests_MeshGenerator.cpp  tests_MeshSmoother.cpp  tests_ParaReader.cpp  tests_Quad.cpp  tests_SizeFunction.cpp  tests_Smoother.cpp  tests_SmoothingStrategy.cpp  tests_Triangle.cpp  tests_Vertex.cpp  triangle_test.cpp  vertex_test.cpp
src/tests/DEPRECATED/: boundary_test.cpp  front_test.cpp  mesh_test.cpp  quad_test.cpp  run_tests.h  sizefunction_test.cpp  smoother_test.cpp  triangle_test.cpp
src/utils/: CMakeLists.txt  Container.h  CppUtils.h  Geometry.h  Helpers.h  Log.h  MathUtility.h  Matrix.h  ParaReader.h  ProgressBar.h  QTree.h  QuadTree.h  StringOps.h  Testing.h  Timer.h  Vec2.h  VecND.h  VtkIO.h  geometry.h  oldParaReader.h  utils.h
